mcs/mbas/Test/errors/DateLiteralsC8.vb
REM LineNo: 9
REM ExpectedError: BC31085
REM ErrorMessage: Date constant is not valid.

Module DateLiterals
    Sub Main()
        Dim d As Date
	
	d = # 11:65:07 PM #
   End Sub
End Module

	
	
